Updated all album pages to be compatible with new responsive CSS.. redoing commit because i didnt add files last time

--- a/Dag 3/artistHemsida/bdz.html
+++ b/Dag 3/artistHemsida/bdz.html
@@ -5,7 +5,9 @@
     <title>BDZ</title>
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
+
 <body>
+
 <header>
 <h1>BDZ</h1>
 </header>
@@ -37,14 +39,16 @@
     <li>Wishing</li>
     <li>Say It Again</li>
     <li>Wake Me Up</li>
-    <li>Brand New Girl</li>
-    <li>Be as One</li>
+    <li>BRAND NEW GIRL</li>
+    <li>Be as ONE</li>
     <li>I Want You Back</li>
 </ol>
     </article>
 </main>
+
 <footer>
 <p><a href="index.html">Back to index</a></p>
 </footer>
+
 </body>
 </html>
