--- a/Dag 3/artistHemsida/fancy.html
+++ b/Dag 3/artistHemsida/fancy.html
@@ -6,15 +6,28 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>FANCY &nbsp;YOU</h1>
-<coverVid><img src="Resources/fancyCover.jpg" alt="Fancy album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kOHB85vDuow"
+</header>
+
+<visual>
+    <article>
+    <img src="Resources/fancyCover.jpg" alt="Fancy album cover">
+    </article>
+        <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/kOHB85vDuow"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</coverVid>
+        </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 7th mini album</p>
 <p>Fancy You and it's title track, FANCY was released on April 29th 2019 and marked a departure from the groups earlier "cute" style to a more mature sound.</p>
-<h3>Tracklist:</h3>
+    </article>
+
+    <article class = "tracklist">
+        <h3>Tracklist:</h3>
 <ol>
     <li>FANCY</li>
     <li>STICK IN MY HEAD</li>
@@ -23,6 +36,11 @@
     <li>TURN IT UP</li>
     <li>STRAWBERRY</li>
 </ol>
+    </article>
+</main>
+
+<footer>
 <p><a href="index.html">Back to index</a></p>
+</footer>
 </body>
 </html>
