--- a/Dag 3/artistHemsida/feelSpecial.html
+++ b/Dag 3/artistHemsida/feelSpecial.html
@@ -6,15 +6,28 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>Feel Special</h1>
-<img src="Resources/feelSpecialCover2.jpg" alt="Feel Special album cover"
-style="height: 315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3ymwOvzhwHs"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/feelSpecialCover2.jpg" alt="Feel Special album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/3ymwOvzhwHs"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 8th mini album</p>
 <p>Feel Special was released on September 23rd 2019, and was the groups first release since member Mina withdrew from promotions due to health reasons.</p>
-<h3>Tracklist:</h3>
+    </article>
+    <article class = "tracklist">
+        <h3>Tracklist:</h3>
 <ol>
     <li>Feel Special</li>
     <li>RAINBOW</li>
@@ -24,6 +37,12 @@ style="height: 315px">
     <li>21:29</li>
     <li>BREAKTHROUGH - Korean version</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
