--- a/Dag 3/artistHemsida/laneOne.html
+++ b/Dag 3/artistHemsida/laneOne.html
@@ -5,14 +5,28 @@
     <title>TWICEcoaster: Lane 1</title>
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
+
 <body>
+<header>
 <h1>TWICEcoaster: Lane 1</h1>
-<img src="Resources/lane1Cover.jpg" alt="TWICEcoaster: Lane 1 album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ePpPVE-GGJw"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/lane1Cover.jpg" alt="TWICEcoaster: Lane 1 album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/ePpPVE-GGJw"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>TWICEs 3rd mini album</p>
+    </article>
+</visual>
+
+<main>
+    <article>
+    <p>TWICEs 3rd mini album</p>
 <p>TWICEcoaster: Lane 1 and it's title track TT was released on October 24 2016.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>TT</li>
@@ -23,6 +37,12 @@
     <li>Next Page</li>
     <li>One in a million</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
