--- a/Dag 3/artistHemsida/laneTwo.html
+++ b/Dag 3/artistHemsida/laneTwo.html
@@ -5,16 +5,31 @@
     <title>TWICEcoaster: Lane 2</title>
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
+
 <body>
+<header>
 <h1>TWICEcoaster: Lane 2</h1>
-<img src="Resources/lane2Cover.jpg" alt="TWICEcoaster: Lane 2 album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ePpPVE-GGJw"
+</header>
+
+
+<visual>
+    <article>
+<img src="Resources/lane2Cover.jpg" alt="TWICEcoaster: Lane 2 album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/8A2t_tAjMz8"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 1st special album</p>
 <p>TWICEcoaster: Lane 2 and it's title track Knock Knock was released on October 24 2016.
     The album is a repackage of <a href="laneOne.html">TWICEcoaster: Lane 1</a>, including two new tracks as well as instrumental
     versions of the title tracks from <a href="theStoryBegins.html">The Story Begins</a> and <a href="pageTwo.html">Page Two</a>.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>Knock Knock</li>
@@ -31,6 +46,12 @@
     <li>Cheer Up - Instrumental (CD-only)</li>
     <li>TT - Instrumental (CD-only)</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
