--- a/Dag 3/artistHemsida/pageTwo.html
+++ b/Dag 3/artistHemsida/pageTwo.html
@@ -5,14 +5,28 @@
     <title>Page Two</title>
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
+
 <body>
+<header>
 <h1>Page Two</h1>
-<img src="Resources/pageTwoCover.jpg" alt="Page Two album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/c7rCyll5AeY"
+</header>
+
+<visual>
+<article>
+    <img src="Resources/pageTwoCover.jpg" alt="Page Two album cover">
+</article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/c7rCyll5AeY"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 2nd mini album</p>
 <p>Page 2 and it's title track CHEER UP was released on April 25th 2016.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>CHEER UP</li>
@@ -23,6 +37,11 @@
     <li>My Headphones On</li>
     <li>I'm Gonna be a Star (CD-only)</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+    <footer>
+        <p><a href="index.html">Back to index</a></p>
+    </footer>
 </body>
 </html>
