--- a/Dag 3/artistHemsida/signal.html
+++ b/Dag 3/artistHemsida/signal.html
@@ -6,13 +6,28 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>SIGNAL</h1>
-<img src="Resources/signalCover.jpg" alt="SIGNAL album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VQtonf1fv_s"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/signalCover.jpg" alt="SIGNAL album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/VQtonf1fv_s"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 4th mini album</p>
-<p>Signal was released on May 15th 2017.</p>
+<p>Signal was released on May 15th 2017.
+    The lyrics for 'EYES EYES EYES' were written by Chaeyound and Jihyo,
+    marking the first time TWICE released a song with lyrics written entirely by group members</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>SIGNAL</li>
@@ -22,6 +37,12 @@
     <li>EYES EYES EYES</li>
     <li>SOMEONE LIKE ME</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
