--- a/Dag 3/artistHemsida/summerNights.html
+++ b/Dag 3/artistHemsida/summerNights.html
@@ -6,14 +6,27 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>Summer Nights</h1>
-<img src="Resources/summerNightsCover.jpg" alt="Summer Nights album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Fm5iP0S1z9w"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/summerNightsCover.jpg" alt="Summer Nights album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/Fm5iP0S1z9w"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 2nd Special album</p>
 <p>Summer Nights and it's title track 'Dance The Night Away' was released on July 9th 2018.
-    The album is a repackage of <a href="whatIsLove.html">What is Love</a>, including the previously CD-only track 'STUCK' as well as three new tracks.
+    The album is a repackage of <a href="whatIsLove.html">What is Love</a>, including the previously CD-only track 'STUCK' as well as three new tracks.</p>
+    </article>
+        <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>Dance The Night Away</li>
@@ -26,6 +39,12 @@
     <li>SAY YES</li>
     <li>STUCK</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+        </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
