--- a/Dag 3/artistHemsida/theStoryBegins.html
+++ b/Dag 3/artistHemsida/theStoryBegins.html
@@ -6,13 +6,26 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>The Story Begins</h1>
-<img src="Resources/storyBeginsCover.jpg" alt="The Story Begins album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0rtV5esQT6I"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/storyBeginsCover.jpg" alt="The Story Begins album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/0rtV5esQT6I"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs debut mini album</p>
-<p>The Story Begins and it's title track Like Ooh-Ahh was released on October 19th 2015.</p>
+<p>The Story Begins and it's title track 'Like Ooh-Ahh' was released on October 19th 2015.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>Like Ooh-Ahh</li>
@@ -22,6 +35,11 @@
     <li>Candy Boy</li>
     <li>Like a Fool</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+    <footer>
+        <p><a href="index.html">Back to index</a></p>
+    </footer>
 </body>
 </html>
