--- a/Dag 3/artistHemsida/twicetagram.html
+++ b/Dag 3/artistHemsida/twicetagram.html
@@ -6,30 +6,50 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>Twicetagram</h1>
-<img src="Resources/twicetagramCover.jpg" alt="Twicetagram album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/V2hlQkVJZhE"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/twicetagramCover.jpg" alt="Twicetagram album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/V2hlQkVJZhE"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 1st Studio album</p>
-<p>Twicetagram and it's title track Likey was released on October 30th 2017.
-    This was the groups first full length album featuring 13 new songs.</p>
+<p>Twicetagram and it's title track 'LIKEY' was released on October 30th 2017.
+    This was the groups first full length album featuring 13 new songs.
+    It was the best-selling K-pop girl group album of 2017, having sold 320,389 copies by the end of the year.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>Likey</li>
-    <li>Turtle</li>
+    <li>거북이 TURTLE</li>
     <li>Missing U</li>
     <li>Wow</li>
-    <li>Ffw</li>
+    <li>FFW</li>
     <li>Ding Dong</li>
     <li>24/7</li>
-    <li>Look At Me</li>
+    <li>날 바라바라봐 LOOK AT ME</li>
     <li>Rollin'</li>
     <li>Love Line</li>
-    <li>Don't Give Up</li>
-    <li>You In My Heart</li>
+    <li>힘내! DON'T GIVE UP</li>
+    <li>널 내게 담아 YOU IN MY HEART</li>
     <li>Jaljayo Good Night</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
