--- a/Dag 3/artistHemsida/yesOrYes.html
+++ b/Dag 3/artistHemsida/yesOrYes.html
@@ -6,13 +6,26 @@
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
 <body>
+<header>
 <h1>YES or YES</h1>
-<img src="Resources/yesOrYesCover.jpg" alt="Yes or Yes album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mAKsZ26SabQ"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/yesOrYesCover.jpg" alt="Yes or Yes album cover">
+    </article>
+    <article>
+    <iframe width="auto" height="auto" src="https://www.youtube.com/embed/mAKsZ26SabQ"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 6th mini album</p>
 <p>YES or YES was released on November 5th 2018.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>YES or YES</li>
@@ -23,6 +36,12 @@
     <li>AFTER MOON</li>
     <li>BDZ - Korean version</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
