--- a/Dag 3/artistHemsida/merryAndHappy.html
+++ b/Dag 3/artistHemsida/merryAndHappy.html
@@ -5,17 +5,31 @@
     <title>Merry & Happy</title>
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
+
 <body>
+<header>
 <h1>Merry & Happy</h1>
-<img src="Resources/merryAndHappyCover.jpg" alt="Merry & Happy album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rRzxEiBLQCA"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/merryAndHappyCover.jpg" alt="Merry & Happy album cover">
+    </article>
+    <article>
+<iframe width="auto" height="auto" src="https://www.youtube.com/embed/rRzxEiBLQCA"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 1st repackage</p>
 <p>Merry & Happy and it's title track 'Heart Shaker' was released on December 11th 2017.
     The album was a repackage of <a href="twicetagram.html">Twicetagram</a> featuring 2 new songs.
     It is the only TWICE album to have a music video for more than one new song, with the video for 'Merry & Happy' releasing 11 days later.
 The titular track is TWICEs first Christmas song.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>Heart Shaker</li>
@@ -24,16 +38,22 @@ The titular track is TWICEs first Christmas song.</p>
     <li>Turtle</li>
     <li>Missing U</li>
     <li>Wow</li>
-    <li>Ffw</li>
+    <li>FFW</li>
     <li>Ding Dong</li>
     <li>24/7</li>
-    <li>Look At Me</li>
+    <li>날 바라바라봐 LOOK AT ME</li>
     <li>Rollin'</li>
     <li>Love Line</li>
-    <li>Don't Give Up</li>
-    <li>You In My Heart</li>
+    <li>힘내! DON'T GIVE UP</li>
+    <li>널 내게 담아 YOU IN MY HEART</li>
     <li>Jaljayo Good Night</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
