--- a/Dag 3/artistHemsida/whatIsLove.html
+++ b/Dag 3/artistHemsida/whatIsLove.html
@@ -5,14 +5,28 @@
     <title>What is Love</title>
     <link rel="stylesheet" type="text/css" href="css/albumStyle.css">
 </head>
+
 <body>
+<header>
 <h1>What is Love</h1>
-<img src="Resources/whatIsLoveCover.jpg" alt="What is Love album cover"
-     style="height:315px">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/i0p1bmr0EmE"
+</header>
+
+<visual>
+    <article>
+<img src="Resources/whatIsLoveCover.jpg" alt="What is Love album cover">
+    </article>
+    <article>
+        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/i0p1bmr0EmE"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </article>
+</visual>
+
+<main>
+    <article>
 <p>TWICEs 5th mini album</p>
 <p>What is Love was released on April 9th 2018.</p>
+    </article>
+    <article class="tracklist">
 <h3>Tracklist:</h3>
 <ol>
     <li>What is Love</li>
@@ -22,6 +36,12 @@
     <li>SAY YES</li>
     <li>STUCK (CD-only)</li>
 </ol>
-<p><a href="index.html">Back to index</a></p>
+    </article>
+</main>
+
+<footer>
+    <p><a href="index.html">Back to index</a></p>
+</footer>
+
 </body>
 </html>
